# vc4asm

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.txt  Makefile  README.md  makeDebug.Cmd  makeDebug.cmd  makeRelease.Cmd  makeRelease.cmd  makeTest.Cmd  runTest.Cmd
CMakeCache.txt/: readme.txt
doc/: VideoCoreIV-addendum.html  changelog.html  directives.html  expressions.html  extensions.html  index.html  infstyle.css  instructions.html  smallimmediate.html  vc4.qinc.html
extra/gtksourceview/: vc4asm.lang
sample/: CMakeLists.txt
sample/hello_fft/: CMakeLists.txt  Makefile  gpu_fft.c  gpu_fft.h  gpu_fft_base.c  gpu_fft_twiddles.c  hello_fft.c  hello_fft_2d.c  hello_fft_2d_bitmap.h  mailbox.c  mailbox.h  profile.pl  stresstest.pl  stresstest2.pl  test.pl  test2.pl  vcio2.h
sample/hello_fft/qasm/: gpu_fft.qinc  gpu_fft_1024k.qasm  gpu_fft_128k.qasm  gpu_fft_16k.qasm  gpu_fft_1k.qasm  gpu_fft_2048k.qasm  gpu_fft_2048k.qinc  gpu_fft_256.qasm  gpu_fft_256k.qasm  gpu_fft_2k.qasm  gpu_fft_32k.qasm  gpu_fft_4096k.qasm  gpu_fft_4k.qasm  gpu_fft_512.qasm  gpu_fft_512k.qasm  gpu_fft_64k.qasm  gpu_fft_8k.qasm  gpu_fft_ex.qinc
sample/simple/: CMakeLists.txt  Makefile  mailbox.c  numbers.hex  smitest  smitest.c  smitest.qasm
share/: vc4.qinc
share/include/: vc4.qinc
share/template/: template.c  template.h
share/vc4inc/: vc4.qinc
share/vc4tmpl/: template2.h
src/: AssembleInst.MSG.h  AssembleInst.cpp  AssembleInst.h  AssembleInst.tables.cpp  CMakeLists.txt  DebugInfo.h  Disassembler.MSG.h  Disassembler.cpp  Disassembler.h  Disassembler.tables.cpp  Eval.MSG.h  Eval.cpp  Eval.h  Inst.cpp  Inst.h  Makefile  Message.cpp  Message.h  Parser.MSG.h  Parser.cpp  Parser.h  Parser.tables.cpp  ReadBin.cpp  ReadBin.h  ReadX.cpp  ReadX.h  Reader.MSG.h  ReaderBase.cpp  ReaderBase.h  Validator.MSG.h  Validator.cpp  Validator.h  WriteC.cpp  WriteC.h  WriteELF.cpp  WriteELF.h  WriteQasm.cpp  WriteQasm.h  Writer.MSG.h  WriterBase.cpp  (+10 more)
test/: CMakeLists.txt  Makefile  asm.macro.hex  asm.macro.qasm  asm.misc.hex  asm.misc.qasm  checkOutput.pl  gpu_fft.qinc  gpu_fft_128k.qasm  gpu_fft_16k.qasm  gpu_fft_1k.qasm  gpu_fft_2048k.qasm  gpu_fft_2048k.qinc  gpu_fft_256.qasm  gpu_fft_256_new.qasm  gpu_fft_2k.qasm  gpu_fft_32k.qasm  gpu_fft_4k.qasm  gpu_fft_512.qasm  gpu_fft_64k.qasm  gpu_fft_8k.qasm  ignoreResult.pl  parser.macro.qasm  parser.pup.qasm  parser.rot.qasm  rpi_shader.qasm  rpi_shader.ref.c  rpi_shader.ref.h  shader_1024k.hex  shader_128k.hex  shader_16k.hex  shader_1k.dis  shader_1k.hex  shader_1k.loop  shader_2048k.hex  shader_256.hex  shader_256_new.hex  shader_256k.hex  shader_2k.hex  shader_32k.hex  (+10 more)
